# cldr-emoji-annotation

./: COPYING  Makefile.am  README  autogen.sh  cldr-annotations.pc.in  cldr-annotations.spec.in  cldr-emoji-annotation.spec.in  configure.ac
annotations/: Makefile.am
annotationsDerived/: Makefile.am
common/: Makefile.am
common/dtd/: Makefile.am
