# vim:set noet ts=4:
#
# Copyright (c) 2017 Takao Fujiwara <takao.fujiwara1@gmail.com>
# Copyright (c) 2017 Red Hat, Inc.

NULL =

xmldir = $(datadir)/unicode/cldr/common/annotationsDerived
xml_DATA = \
    af.xml \
    am.xml \
    ar.xml \
    as.xml \
    az.xml \
    be.xml \
    bg.xml \
    bn.xml \
    bs.xml \
    ca.xml \
    cs.xml \
    cy.xml \
    da.xml \
    de.xml \
    de_CH.xml \
    el.xml \
    en.xml \
    en_001.xml \
    es.xml \
    es_419.xml \
    et.xml \
    eu.xml \
    fa.xml \
    fi.xml \
    fil.xml \
    fr.xml \
    ga.xml \
    gl.xml \
    gu.xml \
    he.xml \
    hi.xml \
    hr.xml \
    hu.xml \
    hy.xml \
    id.xml \
    is.xml \
    it.xml \
    ja.xml \
    ka.xml \
    kk.xml \
    km.xml \
    kn.xml \
    ko.xml \
    ky.xml \
    lo.xml \
    lt.xml \
    lv.xml \
    mk.xml \
    ml.xml \
    mn.xml \
    mr.xml \
    ms.xml \
    my.xml \
    nb.xml \
    ne.xml \
    nl.xml \
    or.xml \
    pa.xml \
    pl.xml \
    pt.xml \
    pt_PT.xml \
    ro.xml \
    root.xml \
    ru.xml \
    si.xml \
    sk.xml \
    sl.xml \
    sq.xml \
    sr.xml \
    sr_Latn.xml \
    sv.xml \
    sw.xml \
    ta.xml \
    te.xml \
    th.xml \
    tr.xml \
    uk.xml \
    ur.xml \
    uz.xml \
    vi.xml \
    zh.xml \
    zh_Hant.xml \
    zu.xml \
    $(NULL)

EXTRA_DIST = \
    $(xml_DATA) \
    $(NULL)
